--- a/html/breakout.html
+++ b/html/breakout.html
@@ -50,17 +50,10 @@ I apologize for the mistake. Here is the updated code with the ball logic fixed 
 				//Audio only plays mp3s and stuff
 				navigator.requestMIDIAccess().then(midiAccess => {
 				  const output = midiAccess.outputs.values().next().value;
-				  const player = new MidiPlayer.Player(event => output.send(event.message));
-				  player.loadFile('music.mid');
-				  player.play({loop: true});
+				  fetch('music.mid')
+				    .then(response => response.arrayBuffer())
+				    .then(midiData => output.send(midiData));
 				});
-				//alternate?
-				//navigator.requestMIDIAccess().then(midiAccess => {
-				//  const output = midiAccess.outputs.values().next().value;
-				//  fetch('music.mid')
-				//    .then(response => response.arrayBuffer())
-				//    .then(midiData => output.send(midiData));
-				//});
 			}
 		}
 
