--- a/html/almost-cube.html
+++ b/html/almost-cube.html
@@ -51,7 +51,17 @@
       gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(positions), gl.STATIC_DRAW), gl.enableVertexAttribArray(positionAttributeLocation), gl.vertexAttribPointer(positionAttributeLocation, 3, gl.FLOAT, !1, 0, 0);
       const normalBuffer = gl.createBuffer();
       gl.bindBuffer(gl.ARRAY_BUFFER, normalBuffer);
-      const vertexNormals = [0, 0, -1, 0, 0, 1, 0, 1, 0, 0, -1, 0, -1, 0, 0, 1, 0, 1, 0, 0, -1, 0];
+      const vertexNormals = [
+    // front
+     0,  0,  1,
+     0,  0,  1,
+     0,  0,  1,
+     0,  0,  1,
+    // back
+     0,  0, -1,
+     0,  0, -1,
+     0,  0, -1,
+     0,  0, -1];
       gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(vertexNormals), gl.STATIC_DRAW), gl.enableVertexAttribArray(normalAttributeLocation), gl.vertexAttribPointer(normalAttributeLocation, 3, gl.FLOAT, !1, 0, 0);
       const indices = [
           0, 1, 2, 2, 3, 0, // front
