turn off spellcheck

--- a/chat.html
+++ b/chat.html
@@ -38,7 +38,7 @@
         <button id="save-code">Save</button>
         <a id="gp-link" target="_blank" title="There is some delay before it's available-try passing random parameters" href="#"></a>
     </div>
-    <div id="openai-output" style="white-space:pre-wrap; color: white"></div>
+    <div id="openai-output" spellcheck="false" style="white-space:pre-wrap; color: white"></div>
     <div id="code-output"></div>
 
     <script>
