--- a/chat.html
+++ b/chat.html
@@ -82,7 +82,7 @@
                     if (t1 > t0) r = r.substring(t0, t1);
                 }
                 let iframe = document.createElement('iframe');
-                iframe.width = '100%'; iframe.height = `${innerHeight >> 1}`;
+                iframe.width = '99%'; iframe.height = `${innerHeight >> 1}`;
                 iframe.srcdoc = r;
                 div.appendChild(iframe);
                 if (confirm("Press OK to also push to GitHub")) {
@@ -91,7 +91,9 @@
                         token2 = prompt("Please input GitHub API key (requires repo permissions)", "");
                         localStorage.setItem('GITHUB_API_KEY', token2)
                     }
-                    let path = prompt("Provide a path (uses gh-pages branch)", localStorage.getItem('GITHUB_PATH') || "jay23606/chat-gpt-voice/contents/html/test.html");
+                    let ghPath = localStorage.getItem('GITHUB_PATH');
+                    if (ghPath === 'null') ghPath = null;
+                    let path = prompt("Provide a path (uses gh-pages branch)", ghPath || "jay23606/chat-gpt-voice/contents/html/test.html");
                     localStorage.setItem('GITHUB_PATH', path);
                     let p = path.replace('contents/','').split('/');
                     let gp = `https://${p[0]}.github.io/${p[1]}/${p.slice(2).join('/')}` //add github pages link to top
