--- a/chat.html
+++ b/chat.html
@@ -5,13 +5,25 @@
     <!--<link rel="manifest" href="manifest.json" />-->
     <link href="https://fonts.cdnfonts.com/css/perfect-dos-vga-437" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- needed for CodeMirror editor -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.62.0/codemirror.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.62.0/theme/dracula.min.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.62.0/codemirror.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.62.0/mode/xml/xml.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.62.0/mode/javascript/javascript.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.62.0/mode/css/css.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.62.0/mode/htmlmixed/htmlmixed.min.js"></script>
     <style>
         textarea {
             font-size: large;
             font-family: 'Perfect DOS VGA 437', sans-serif;
             background-color: #B3C0B7;
         }
-        button { font-family: 'Perfect DOS VGA 437', sans-serif; }
+
+        button {
+            font-family: 'Perfect DOS VGA 437', sans-serif;
+        }
+
         body, html {
             margin: 0;
             height: 100%;
@@ -19,6 +31,9 @@
             font-family: 'Perfect DOS VGA 437', sans-serif;
             background: black;
             color: white;
+        }
+
+        #openai-output {
         }
     </style>
     <link rel="icon" href="data:,">
@@ -34,7 +49,9 @@
         <button id="save-code">Save</button>
         <a id="gp-link" target="_blank" title="There is some delay before it's available-try passing random parameters" href="#"></a>
     </div>
-    <div id="openai-output" spellcheck="false" style="white-space:pre-wrap; color: white"></div>
+    <div style="position:relative">
+        <div id="openai-output" spellcheck="false" style="white-space:pre-wrap; color: white"></div>
+    </div>
     <div id="code-output"></div>
 
     <script>
@@ -60,16 +77,27 @@
             if (history.length > 4) { history.shift(); history.shift(); }
             outputHtml(codeOutput);
         });
-
-        saveCode.addEventListener('click', () => outputHtml(codeOutput));
-        const outputHtml = (div) => {
-            if (!codeCbx.checked) return openaiOutput.contentEditable = "false", saveDiv.style.display = 'none';
-            openaiOutput.contentEditable = "true", saveDiv.style.display = 'block', div.style.background = 'white', div.style.color = 'black', div.innerHTML = '';
-            let r = (openaiOutput.textContent.match(/```(?:html)?([\s\S]*?)```/i) || [])[1] || openaiOutput.textContent;
+        saveCode.addEventListener('click', () => outputHtml(codeOutput, true));
+        var editor = null;
+        const outputHtml = (div, fromSave = false) => {
+            if (!codeCbx.checked) return saveDiv.style.display = 'none'
+            saveDiv.style.display = 'block', div.style.background = 'white', div.style.color = 'black', div.innerHTML = '';
+            const r = editor && fromSave ? editor.getValue() : openaiOutput.textContent.match(/```(?:html)?([\s\S]*?)```/i)?.[1] || openaiOutput.textContent;
+            editor?.getWrapperElement()?.remove();
+            editor = CodeMirror(openaiOutput, {
+                lineNumbers: true,
+                mode: "htmlmixed",
+                theme: "dracula",
+                htmlMode: true,
+                matchTags: { bothTags: true },
+                autoCloseTags: true,
+                autoCloseBrackets: true
+            });
+            editor.setValue(r);
             let iframe = document.createElement('iframe');
             iframe.width = '99%', iframe.height = `${innerHeight >> 1}`, iframe.srcdoc = r;
             div.appendChild(iframe);
-            if (!confirm("Press OK to also push to GitHub")) return;
+            if (!fromSave || !confirm("Press OK to also push to GitHub")) return;
             let token2 = localStorage.getItem('GITHUB_API_KEY') || prompt("Please input GitHub API key (requires repo permissions)", "")?.trim();
             if (token2 && token.length >= 10) localStorage.setItem('GITHUB_API_KEY', token2);
             let path = prompt("Provide a path (uses gh-pages branch)", localStorage.getItem('GITHUB_PATH')?.replace('null', '') || "jay23606/chat-gpt-voice/contents/html/test.html");
